--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=travel_and_tours
+DB_DATABASE=mini_project2_laravel
 DB_USERNAME=root
-DB_PASSWORD=Burb3rry!
+DB_PASSWORD=jaime1825
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
