--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=travel_and_tours
 DB_USERNAME=root
-DB_PASSWORD=Burb3rry!
+DB_PASSWORD=Gyosanim31!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
