Update .env file

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:42UDbVMWB8XePzt3x4Ipr5hNa2XiO1PM42MhOXDyI+k=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+GOOGLE_MAPS_API_KEY=AIzaSyBoaANOkJ9LAa78Rg83rOexloz5z3lOhBQ
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
