Update changes for deployment

--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build --outDir public"
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
-    },
-    "vite": {
-        "outDir": "public"
     }
 }
