--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build --outDir public"
+        "build": "vite build"
     },
     "devDependencies": {
         "axios": "^1.1.2",
